# neural

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  package.json  package.json.backup  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  ollama.rs
